kubernetes/apps/self-hosted/mattermost/instance/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: self-hosted
spec:
  hostnames:
    - mattermost.vzkn.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: mattermost
          port: 8065
